# UniswapV2-VOB

./: Cargo.toml  README.md
Docker/: Ethereum-node.yml
Docker/grafana/: dashboard
Docker/prometheus/: prometheus.yml
examples/: simple_infura.rs  uniswap_events.rs  virtual_orderbook.rs
src/: constants.rs  lib.rs
src/analytics/: mod.rs
src/events/: mod.rs  uniswap.rs
src/orderbook/: event_processor.rs  logic.rs  mod.rs  model.rs
src/utils/: logic.rs  mod.rs
src/web3/: infura.rs  mod.rs
