[package]
name = "uniswapv2_vob"
version = "0.1.0"
edition = "2021"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "On-Chain Liquidity Intelligence Platform is a comprehensive Rust-based solution for real-time analysis of on-chain liquidity in decentralized finance (DeFi) protocols."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/UniswapV2-VOB"
homepage = "https://github.com/joaquinbejar/UniswapV2-VOB.git"
keywords = ["finance", "defi", "liquidity", "blockchain", "ethereum"]
categories = ["finance", "web-programming", "web-programming" ]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*.png",
    "Docker/**/*.Dockerfile",
    "Docker/**/*.yml",
]

[dependencies]
rand = "0.8.5"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
num-traits = "0.2.14"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
web3 = "0.19.0"
tokio = { version = "1.40.0", features = ["full"] }
hex = "0.4.3"
ethabi = "18.0.0"


[dev-dependencies]
tokio = { version = "1.40.0", features = ["full", "test-util", "macros"] }
futures-util = "0.3.30"
futures = "0.3.31"
mockall = "0.13.0"

[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[lib]
name = "uniswapv2_vob"
path = "src/lib.rs"

